--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
