--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
+    "resend": "^4.6.0",
     "zod": "^3.25.28"
   }
 }
