--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "html-react-parser": "^5.2.5",
+    "jodit-react": "^5.2.19",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
